--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ abbr {
 }
 
 .page-wrapper > #zen-supporting p {
-    text-align: right;
+    text-align: end;
     margin-right: 5%;
     padding-right: 20px;
     border-right: black 1px solid;
