--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ abbr {
 
 .intro > .summary {
     grid-area: summary;
-    width: 15%;
+    width: 25%;
     font-size: 20px;
     justify-self: end;
     text-align: right;
@@ -97,25 +97,20 @@ abbr {
 
 .intro > .preamble {
     grid-area: preamble;
-    text-align: left;
-    width: 50%;
+    width: 50vw;
     margin-right: 5%;
     padding-right: 20px;
-    justify-self: end;
 }
 
 .intro > .preamble > h3 {
-    text-align: end;
+    justify-self: center;
     font-size: 35px;
 }
 
 .intro > .preamble > p {
-    justify-self: end;
+    justify-self: center;
     width: 50%;
-    text-align: right;
-    margin-right: 5%;
-    padding-right: 20px;
-    border-right: black 1px solid;
+    margin: 20px;
 }
 
 .sidebar {
@@ -143,20 +138,14 @@ abbr {
     grid-area: main;
     display: grid;
     grid-template-areas: "explanation" "participation" "benefits" "requirements";
-    justify-content: end;
 }
 
 .page-wrapper > #zen-supporting h3 {
-    text-align: end;
     font-size: 30px;
 }
 
 .page-wrapper > #zen-supporting p {
-    text-align: end;
-    margin-right: 5%;
-    padding-right: 20px;
-    border-right: black 1px solid;
-    
+    padding-left: 5%;
 }
 
 #zen-explanation {
@@ -176,13 +165,12 @@ abbr {
 }
 
 #zen-supporting h3 {
-    justify-self: end;
     font-size: 30px;
 }
 
 #zen-supporting p {
-    margin-left: 25px;
-    padding-left: 50px;
+    margin-left: 5%;
+    width: 50%;
 }
 
 footer {
