--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ a:link {
     text-decoration: underline;
 }
 
-a:hover, abbr:hover {
+a:hover,
+abbr:hover {
     color: #b47a38;
     font-size: 105%;
 }
@@ -74,11 +75,11 @@ abbr {
 .page-wrapper {
     display: grid;
     grid-template-areas:
-    "intro intro"
-    "aside main"
-    "footer footer";
+        "intro intro"
+        "aside main"
+        "footer footer";
     grid-template-columns: 1fr 4fr;
-    gap:  0 30px;
+    gap: 0 30px;
 }
 
 .page-wrapper #zen-intro {
@@ -89,7 +90,7 @@ abbr {
     align-items: end;
 }
 
-.intro > header[role^="ban"] > h2 {
+.intro>header[role^="ban"]>h2 {
     grid-area: title;
     font-size: 30px;
     width: minmax(min-content, max-content);
@@ -98,7 +99,7 @@ abbr {
     margin-right: 20px;
 }
 
-.intro > header[role*="nne"] {
+.intro>header[role*="nne"] {
     display: grid;
     grid-template-areas: "logo title";
     grid-template-columns: 1fr 2fr;
@@ -107,7 +108,7 @@ abbr {
     margin-bottom: 20px;
 }
 
-.intro > header[role$="ner"] > h1 {
+.intro>header[role$="ner"]>h1 {
     grid-area: logo;
     justify-self: start;
     border-style: solid;
@@ -128,7 +129,7 @@ abbr {
     margin-right: 20px;
 }
 
-.intro > .preamble {
+.intro>.preamble {
     grid-area: preamble;
     text-align: left;
     width: 50%;
@@ -137,14 +138,14 @@ abbr {
     padding-right: 20px;
 }
 
-.intro > .preamble > h3 {
+.intro>.preamble>h3 {
     justify-self: center;
     padding-bottom: 10px;
     font-size: 30px;
     width: fit-content;
 }
 
-.intro > .preamble > h3::after {
+.intro>.preamble>h3::after {
     content: "";
     justify-self: center;
     display: block;
@@ -167,6 +168,7 @@ aside[role="complementary"] h3 {
 aside[role~="complementary"] li {
     margin-bottom: 10px;
 }
+
 aside[role|="complementary"] ul {
     margin-left: 25px;
     padding-left: 50px;
@@ -178,7 +180,7 @@ aside[role|="complementary"] ul {
     grid-area: main;
 }
 
-div + h3 {
+div+h3 {
     font-size: 25px;
 }
 
@@ -186,7 +188,8 @@ h3:only-of-type {
     margin-top: 20px;
 }
 
-h3 ~ p, h3 ~ ul {
+h3~p,
+h3~ul {
     margin-bottom: 20px;
     line-height: 1.6;
     font-size: 18px;
